src/css/imports/style.scss
/* ... */
@media (max-width: 576px) {
    body {
        background-image: none;
    }

    h1 {
        font-size: 1.9rem;
    }

    nav li {
        display: block;
    }

    .hero__heading-title {
        text-align: center;
    }

    .hero__heading-description {
        text-align: center;
        margin-bottom: 35px;
    }

    .feedback__input-container {
        flex-direction: column;
    }

    .input_feedback {
        margin-right: 0;
        margin-bottom: 10px;
    }

    .features {
        margin-top: 60px;
    }

    .videos {
        margin-top: 23px;
    }

    .pricing-range__config {
        flex-direction: column;
    }

    .pricing-range__price-label {
        margin-left: 0;
    }

    .pricing-range__odometer-container {
        font-size: 28px;
    }

    .pricing-range__config {
        font-size: 1rem;
        font-weight: 300;
    }

    .odometer-formatting-mark:before {
        top: -7px;
    }

    .footer__left {
        font-size: 1.33rem;
        line-height: 3rem;
    }

    .footer__right {
        margin-top: 30px;
        text-align: left;
        line-height: 2rem;
    }

    .footer__terms {
        margin-top: 24px;
        text-align: left;
    }

    .articles__articles {
        margin-top: 20px;
    }

    .articles__video iframe {
        height: 200px;
    }
}

@media (max-width: 992px) {
    .hero__feature {
        width: 100%;
        max-width: initial;
        height: inherit;
    }

    .pricing-range__credentials {
        flex-direction: column;

        & input {
            margin-bottom: 24px;

            &.input, &.button {
                width: 100%
            }
        }
    }
}

